# clihost-mcp

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  config.example.yaml  pyproject.toml  smoke_test.py
src/cli_mcp/: __init__.py  cli.py  config.py  registry.py  server.py
src/cli_mcp/adapters/: __init__.py  base.py  claude_code.py  codex.py  shell.py
src/clihost_mcp/: __init__.py  cli.py  config.py  registry.py  runner.py  server.py
src/clihost_mcp/adapters/: __init__.py  base.py  claude_code.py  codex.py  shell.py
tests/: test_adapters.py  test_config.py  test_runner.py  test_server.py
