[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clihost-mcp"
version = "0.1.0"
description = "MCP server that hosts local CLIs (Claude Code, Codex CLI, shell) as MCP tools."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "clihost-mcp" }]
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
clihost-mcp = "clihost_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/clihost_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
